--- a/milestones/milestone2/web_page/index.html
+++ b/milestones/milestone2/web_page/index.html
@@ -10,6 +10,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <!-- Mapbox GL JS -->
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
+
+    <!-- D3.js -->
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="script.js"></script>
 </head>
 
 <body>
@@ -50,69 +57,90 @@
 
 
             <section id="global-snapshot" class="data__section global-snapshot">
-                <h2 class="card__title">Global snapshot</h2>
-                <p class="section-caption">Who Plays What, and Where?
-                </p>
-                <div class="graph-container">
+                <div class="flex-display">
+
+                    <h2 class="card__title">Global snapshot</h2>
+                    <p class="section-caption">Who Plays What, and Where?
+                    </p>
                     <p class="card__desc">Discover how board game preferences vary across the world. From strategic
                         classics
                         in Europe to party
                         favorites in South America, this interactive map highlights the top-played games in each
                         country,
                         alongside average game complexity and regional review trends.</p>
+                    <div class="graph-container">
 
-                    <div class="graph-box">
-                        <img alt="global_stat" src="./assets/world_tour.png">
+                        <div class="world_tour_container">
+
+                            <div id="map"></div>
+                            <div id="country-info" class="info-panel"></div>
+                        </div>
+
+
                     </div>
                 </div>
             </section>
             <section id="categories-over-time" class="data__section global-snapshot">
-                <h2 class="card__title">Game Categories Over Time</h2>
-                </p>
-                <div class="graph-container">
-                    <p class="card__desc">From strategy and role-playing games to puzzles and party favorites, player
+                <div class="flex-display">
+
+                    <h2 class="card__title">Game Categories Over Time</h2>
+                    </p>
+                    <p class="card__desc">From strategy and role-playing games to puzzles and party favorites,
+                        player
                         preferences have shifted in fascinating ways across 2019, 2022, and 2025.
 
                         Animated visuals highlight which genres gained momentum and which ones lost steam — offering
                         insights into how global events and changing tastes have shaped the way we play.
 
                     </p>
+                    <div class="graph-container">
 
-                    <div class="graph-box">
-                        <img alt="global_stat" src="./assets/world_tour.png">
+                        <div class="graph-box">
+                            <img alt="global_stat" src="./assets/world_tour.png">
+                        </div>
                     </div>
                 </div>
             </section>
 
             <section id="how-we-play" class="data__section global-snapshot">
-                <h2 class="card__title">How We Play?</h2>
-                <p class="section-caption">Alone or Together
-                </p>
-                <div class="graph-container">
-                    <p class="card__desc">Explore how player dynamics have changed over time — from solo strategy games
-                        to lively group play.</p>
+                <div class="flex-display">
 
-                    <div class="graph-box">
-                        <img alt="global_stat" src="./assets/world_tour.png">
+                    <h2 class="card__title">How We Play?</h2>
+                    <p class="section-caption">Alone or Together
+                    </p>
+                    <p class="card__desc">Explore how player dynamics have changed over time — from solo strategy
+                        games
+                        to lively group play.</p>
+                    <div class="graph-container">
+
+                        <div class="graph-box">
+                            <img alt="global_stat" src="./assets/world_tour.png">
+                        </div>
                     </div>
                 </div>
             </section>
 
             <section id="complexity-challenge" class="data__section global-snapshot">
-                <h2 class="card__title">Complexity and Challenge</h2>
-                ]
-                <div class="graph-container">
-                    <p class="card__desc">Not all games are created equal — and not all players crave the same level of
-                        challenge. Explore how game complexity varies around the world, with interactive maps comparing
+                <div class="flex-display">
+
+                    <h2 class="card__title">Complexity and Challenge</h2>
+
+                    <p class="card__desc">Not all games are created equal — and not all players crave the same level
+                        of
+                        challenge. Explore how game complexity varies around the world, with interactive maps
+                        comparing
                         trends across different countries and years.
 
-                        Whether it’s light party games or deep strategic experiences, this view reveals how different
+                        Whether it’s light party games or deep strategic experiences, this view reveals how
+                        different
                         regions approach gameplay — and what that says about their evolving preferences.
 
                     </p>
+                    <div class="graph-container">
 
-                    <div class="graph-box">
-                        <img alt="global_stat" src="./assets/world_tour.png">
+                        <div class="graph-box">
+                            <img alt="global_stat" src="./assets/world_tour.png">
+                        </div>
                     </div>
                 </div>
             </section>
